# mpmath_fft

./: .gitignore  Makefile  README.md  pyproject.toml  run_tests.sh
benchmarks/: benchmark.py
docs/source/: conf.py  index.rst  user_guide.rst
docs/source/api/: core.rst  kernels.rst  real_transforms.rst
mpmath_fft/: __init__.py  _kernels.py  _real_transforms.py
tests/: __init__.py  helpers.py  test_kernels.py  test_transforms.py  test_utils.py
usage/: demo.py  spectral_decay.py
